# bareos

./: .clang-format  .travis.yml  Dockerfile  compose.yaml  configure  envoy.yaml  grpc_build.sh  grpc_run.sh
.travis/: all  travis_before_install.sh  travis_before_script.sh
autoconf/: configure.in
cmake/: BareosCcache.cmake
core/cmake/: BareosGenerateDebianInfo.cmake
core/src/: CMakeLists.txt
core/src/cats/: bdb_dbi.h  bdb_mysql.h  bdb_postgresql.h  bdb_priv.h  bdb_query_enum_class.h  bdb_query_names.inc  bdb_sqlite.h  bvfs.cc  bvfs.h  cats.cc  cats.h  cats_backends.cc  cats_backends.h  dbi.cc  mysql.cc  mysql_queries.inc  postgresql.cc  postgresql_queries.inc  sql.cc  sql.h  sql_create.cc  sql_delete.cc  sql_find.cc  sql_get.cc  sql_list.cc  sql_pooling.cc  sql_pooling.h  sql_query.cc  sql_update.cc  sqlite.cc  sqlite_queries.inc
core/src/console/: CMakeLists.txt  auth_pam.cc  auth_pam.h  bconsole.conf.in  conio.cc  conio.h  console.cc  console_conf.cc  console_conf.h  func.h
core/src/dird/: CMakeLists.txt  admin.cc  admin.h  archive.cc  archive.h  auth_pam.cc  auth_pam.h  authenticate.cc  authenticate.h  autoprune.cc  autoprune.h  autorecycle.h  backup.cc  backup.h  bsr.cc  bsr.h  catreq.cc  catreq.h  connection_plugin.cc  connection_plugin.h  consolidate.cc  consolidate.h  create.cc  create.h  dbcheck.cc  dir_plugins.cc  dir_plugins.h  dird.cc  dird.h  dird_conf.cc  dird_conf.h  expand.cc  expand.h  fd_cmds.cc  fd_cmds.h  getmsg.cc  getmsg.h  inc_conf.cc  inc_conf.h  jcr_util.cc  (+95 more)
core/src/dird/connection_plugin/grpc/: CMakeLists.txt  client.cc  common.proto  config.cc  config.proto  database.cc  database.proto  gclient.cc  grpc.cc  grpc.h  restore.cc  restore.h  restore.proto  service.proto
core/src/dird/connection_plugin/grpc/protos/: README.md  common.proto  config.proto  database.proto  restore.proto
core/src/dird/connection_plugin/grpc/protos/common/: entities.proto
core/src/filed/: accurate.cc  accurate.h  accurate_htable.cc  accurate_lmdb.cc  authenticate.cc  backup.cc  backup.h  compression.cc  compression.h  crypto.cc  crypto.h  dir_cmd.cc  dir_cmd.h  estimate.cc  estimate.h  (+18 more)
debian/: rules
src/dird/: dird.h  dird_conf.c  dird_conf.h  ndmp_dma_backup_NDMP_BAREOS.c  ndmp_dma_backup_NDMP_NATIVE.c  ndmp_dma_generic.c  ndmp_dma_priv.h  ndmp_dma_restore_NDMP_BAREOS.c  ndmp_dma_restore_NDMP_NATIVE.c  ndmp_dma_storage.c  ndmp_fhdb_lmdb.c  protos.h  sd_cmds.c  storage.c  ua_impexp.c  ua_status.c  ua_update.c
src/include/: bareos.h
src/ndmp/: ndma_cops_backreco.c  ndma_cops_query.c  ndmagents.h
systemtests/: CTestCustom.cmake.in
systemtests/cmake/: BareosSystemtestFunctions.cmake
systemtests/scripts/: webui.sh
systemtests/tests/: CMakeLists.txt
vmware/packaging/: bareos-vmware.spec
web-restore/bareos-ui/: README.md  package-lock.json  package.json
web-restore/webui-next/: .eslintignore  .gitignore  .prettierignore  .prettierrc  README.md  package-lock.json  package.json  quasar.config.js
web/webapi/: package-lock.json  package.json
web/webui/: .editorconfig  .env  README.md  package-lock.json  package.json  readme.md
webui/: .editorconfig  .gitignore  README.md  index.html  package-lock.json  package.json
webui/api/: index.js
webui/config/: application.config.php
webui/public/: index.php  manifest.json
webui/src/: App.vue  main.js
(+524 files in other folders)
